2018-10-09  Arnaud Charlet  <charlet@adacore.com>

	* libgnat/a-coboho.ads (Storage_Element): Fix a typo.

2018-10-09  Claire Dross  <dross@adacore.com>

	* libgnat/a-cfinve.ads: Remove default value for
	Max_Size_In_Storage_Elements as it was not supported in SPARK.

2018-10-09  Ed Schonberg  <schonberg@adacore.com>

	* exp_ch6.adb (Add_Call_By_Copy_Node,
	Add_Simple_Call_By_Copy_Node, Expand_Call_Helper): Reset
	Is_True_Constant on entities used as Out or In_Out parameters in
	calls.

2018-10-09  Ed Schonberg  <schonberg@adacore.com>

	* exp_unst.adb (Unnest_Subprogram): Do not load System to obtain
	the Address entity unless an activation record is being built.
	Removes useless with_clauses for System when nested subprograms
	do not have uplevel references, and therefore do not need
	activation records.

2018-10-09  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch6.adb (Fully_Conformant_Expressions): Handle properly
	the conformance check on an aspect expression that includes a
	call to an instance of Unchecked_Conversion, or more generally a
	call to an intrinsic operation.

2018-10-09  Eric Botcazou  <ebotcazou@adacore.com>

	* repinfo.adb: Remove with/use clause for Stand.
	(List_Mechanisms): List the mechanism of functions only.

2018-10-09  Bob Duff  <duff@adacore.com>

	* doc/gnat_ugn/gnat_utility_programs.rst: Correct spelling of
	--eol switch.  Document the language-version switches.  Update
	description for --no-exception.

2018-10-09  Vasiliy Fofanov  <fofanov@adacore.com>

	* libgnat/s-os_lib.ads (Normalize_Pathname): Fix incorrect
	comment.

2018-10-09  Arnaud Charlet  <charlet@adacore.com>

	* vxlink.adb: Remove pragma Annotate, no longer needed.

2018-10-09  Ed Schonberg  <schonberg@adacore.com>

	* checks.adb (Apply_Type_Conversion_Checks): Use GNATprove_Mode
	rather than SPARK_mode in order to preserve the Do_Range_Check
	flag for verification purposes.

2018-10-09  Ed Schonberg  <schonberg@adacore.com>
